cmake_minimum_required(VERSION 2.8)

project(Strings)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(string2 string2.cpp)

add_executable(string3 string3.cpp)

add_executable(string4 string4.cpp)

add_executable(string5 string5.cpp)

add_executable(string6 string6.cpp)

add_executable(string7 string7.cpp)

add_executable(string8 string8.cpp)

add_executable(string9 string9.cpp)