cmake_minimum_required(VERSION 3.0)

PROJECT(Variable)

add_executable(VariableRnage VariableRnage.cpp)

add_executable(string_test string_test.cpp)

add_executable(testGphoto2 testGphoto2.cpp)

add_executable(globalAndLocal globalAndLocal.cpp)

add_executable(basic_variables basic_variables.cpp)

add_executable(exercise_01 exercise_01.cpp)